--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,9 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="text/javascript" src="./dist/bundle.js"></script>
   </body>
 
-  <script type="text/javascript" src="/dist/bundle.js"></script>
+  
   
 </html>
